# index-analyst

./: AGENTS.md  design.md  perplexity_analysis_history.md  spx-direct-api-workflow-spec.md
spx-analyst/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
spx-analyst/docs/: PR-1-spx-daily-framework-migration.md  PR-10-research-assistant-phase1.md  PR-11-research-assistant-phase2.md  PR-12-research-assistant-phase3.md  PR-13-research-assistant-phase4.md  PR-14-responses-api-chat.md  PR-15-compact-chat-preload.md  PR-16-analyst-charter-preload-voice.md  PR-17-publication-viewer-refactor.md  PR-18-pass2-task-voice.md  PR-2-spx-two-pass-prompt-overhaul.md  PR-3-memory-rollup-overhaul.md  PR-3.1-perplexity-backfill.md  PR-3.2-memory-design-decision-brief.md  PR-4-live-ab-results.md  PR-4-pass2-image-optimization.md  PR-4.1-pass2-stub-response-fix.md  PR-5-eps-master-history.md  PR-6-pass1-schema-discipline.md  PR-7-pass2-investor-report-template.md  PR-8-pass1-repair-hardening.md  PR-9-daily-run-import.md  chat-api-payload-example-2026-06-25.md  research-assistant-operator-guide.md
spx-analyst/framework/: SP500-SCHK-Trading-Methodology-v3.md  SPX-Claude-Role-Block.md  chat-assistant-instructions.md
spx-analyst/scripts/: setup_openai_assistant.py  setup_openai_resources.py
spx-analyst/src/: __init__.py  analysis_engine.py  anthropic_client.py  chart_pack.py  chat_context.py  chat_preload.py  chat_service.py  chat_sessions.py  cli.py  config.py  divergence_titles.py  eps_history.py  external_data.py  files.py  formatting.py  import_run.py  investor_report_export.py  market_data.py  memory.py  migrate_perplexity.py  monte_carlo.py  openai_assistant.py  openai_responses.py  pass2_images.py  precompute.py  prompts.py  rag_index.py  report_assembly.py  schemas.py  state_enforcement.py  state_normalize.py  structure.py  validation.py  valuation.py
spx-analyst/web/: package.json  (+1 more)
(+210 files in other folders)
