[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-analyst"
version = "0.1.0"
description = "Phase 1 headless direct-API analysis engine for the S&P 500 / SCHK tactical trading workflow."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "Pillow>=10.3.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[project.scripts]
spx-analyst = "src.cli:app"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that call live external APIs (skipped unless API keys are present)",
]
